# SLP-Training

./: .gitignore  README.md  nbgen  nncw.ipynb  nncw.py  pyproject.toml  scratchpad.ipynb
matlab/: data.m  nn.m
report/: interrim-feedback.lyx  references.bib  report.lyx
results/: exp1-test1.json  exp1-test2-1.p  exp1-test2-10.p  exp1-test2-11.p  exp1-test2-12.p  exp1-test2-13.p  exp1-test2-14.p  exp1-test2-2.p  exp1-test2-3.p  exp1-test2-4.p  exp1-test2-5.p  exp1-test2-6.p  exp1-test2-7.p  exp1-test2-8.p  exp1-test2-9.p  exp1-test2.p  exp1-test3.p  exp1-test4.p  exp1-test5.p  exp1-test6.p  test1-exp1-mean.csv  test1-exp1-std.csv  test1-exp2-mean.csv  test1-exp2-std.csv  test2-exp1-mean.csv  test2-exp1-std.csv  test2-exp2-mean.csv  test2-exp2-std.csv  test3-exp1-mean.csv  test3-exp1-std.csv  test4-exp1-mean.csv  test4-exp1-std.csv  test5-exp1-mean.csv  test5-exp1-std.csv  test6-exp1-mean.csv  test6-exp1-std.csv  test7-exp1-mean.csv  test7-exp1-std.csv
tensorboard-logs/exp2-1-20210503-173958/train/: events.out.tfevents.1620059998.andy-hp.894248.64394.v2  events.out.tfevents.1620059999.andy-hp.profile-empty
tensorboard-logs/exp2-1-20210503-174203/train/: events.out.tfevents.1620060123.andy-hp.894248.216914.v2  events.out.tfevents.1620060124.andy-hp.profile-empty
tensorboard-logs/exp2-15-20210503-174008/train/: events.out.tfevents.1620060008.andy-hp.894248.119987.v2  events.out.tfevents.1620060009.andy-hp.894248.121865.v2  events.out.tfevents.1620060009.andy-hp.894248.123743.v2  events.out.tfevents.1620060009.andy-hp.profile-empty  (+12 more)
(+388 files in other folders)
