[tool.poetry]
name = "shallow-training"
version = "0.1.0"
description = ""
authors = ["andy <andy@sarsoo.xyz>"]

[tool.poetry.dependencies]
python = "~3.11"
tensorflow-macos = "^2.4.1"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
jupyterlab = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
